--- a/project/index.html
+++ b/project/index.html
@@ -12,91 +12,9 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <style>
-        .img1:hover {
-            height: 120px;
-            width: 120px;
-            margin: 0 auto;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: relative;
-        }
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 
-        .para {
-            display: none;
-        }
-
-        .box1 {
-            width: 100px;
-        }
-
-        .box1:hover .para {
-            display: block;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: absolute;
-            /* margin-left: 0px; */
-            margin-bottom: 15%;
-        }
-
-        .img2:hover {
-            height: 120px;
-            width: 120px;
-            margin: 0 auto;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: relative;
-        }
-
-        .para1 {
-            display: none;
-        }
-
-        .box2 {
-            width: 100px;
-        }
-
-        .box2:hover .para1 {
-            display: block;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: absolute;
-            /* margin-left: 0px; */
-            margin-bottom: 15%;
-        }
-
-        .img3:hover {
-            height: 120px;
-            width: 120px;
-            margin: 0 auto;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: relative;
-        }
-
-        .para2 {
-            display: none;
-        }
-
-        .box3 {
-            width: 100px;
-        }
-
-        .box3:hover .para2 {
-            display: block;
-            transition: all;
-            transition-duration: 1s;
-            transition-delay: 0s;
-            position: absolute;
-            /* margin-left: 0px; */
-            margin-bottom: 15%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -107,13 +25,13 @@
     <h1 class="text-center mt-5 text-danger">Everything You Need for</h1>
     <h1 class="text-center mb-5 text-danger">a Modern Interior</h1>
 
-    <div class="container-sm">
+    <div class="container">
         <div class="d-flex justify-content-around mt-5 ms-1 mb-3">
             <div class="box1">
                 <img src="./image/1.png" alt="" height="200px" class="bg-light rounded-circle img1">
                 <div>
-                    <h3>Bedroom</h3>
-                    <p class="para">Beds and mattresses <br>
+                    <h3 class="ms-5">Bedroom</h3>
+                    <p class="para text-center">Beds and mattresses <br>
                         Dressing Tables <br>
                         Pillowcases
                     </p>
@@ -123,8 +41,8 @@
             <div class="box2">
                 <img src="./image/2.png" alt="" height="200px" class="bg-light rounded-circle img2">
                 <div>
-                    <h3>Living Room</h3>
-                    <p class="para1">Bookcases and storage <br>
+                    <h3 class="ms-5">Living Room</h3>
+                    <p class="para1 text-center">Bookcases and storage <br>
                         Coffee Tables <br>
                         Cabinates
                     </p>
@@ -134,41 +52,52 @@
             <div class="box3">
                 <img src="./image/3.png" alt="" height="200px" class="bg-light rounded-circle img3">
                 <div>
-                    <h3>Living Room</h3>
-                    <p class="para2">Mirrors <br>
+                    <h3 class="ms-5">Bathroom</h3>
+                    <p class="para2 text-center">Mirrors <br>
                         Bathrooms rugs <br>
                         Bathrobes and slippers
+                    </p>
+                </div>
+            </div>
+
+            <div class="box4">
+                <img src="./image/4.png" alt="" height="200px" class="bg-light rounded-circle img4">
+                <div>
+                    <h3 class="ms-5">Decoration</h3>
+                    <p class="para4 text-center">Flowerpots <br>
+                        Glassware <br>
+                        Home Fregrance
+                    </p>
+                </div>
+            </div>
+
+            <div class="box5">
+                <img src="./image/5.png" alt="" height="200px" class="bg-light rounded-circle img5">
+                <div>
+                    <h3 class="ms-5">Office</h3>
+                    <p class="para5 text-center">Desks and bureaus <br>
+                        Office chairs <br>
+                        Filing cabinets
+                    </p>
+                </div>
+            </div>
+
+            <div class="box6">
+                <img src="./image/6.png" alt="" height="200px" class="bg-light rounded-circle img6">
+                <div>
+                    <h3 class="ms-5">Kitchen</h3>
+                    <p class="para6 text-center">Cupboards <br>
+                        Chest of drawers <br>
+                        Dining tables
                     </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <img src="./image/4.png" alt="" height="200px" class="bg-light rounded-circle">
-    <img src="./image/5.png" alt="" height="200px" class="bg-light rounded-circle">
-    <img src="./image/6.png" alt="" height="200px" class="bg-light rounded-circle">
-
-
-    <!-- <div class="d-flex justify-content-around mt-5 ms-1 mb-3">
-
-
-        <div>
-            <h3>Bathroom</h3>
-        </div>
-        <div>
-            <h3>Decoration</h3>
-        </div>
-        <div>
-            <h3>Office</h3>
-        </div>
-        <div>
-            <h3>Kitchen</h3>
-        </div>
-    </div> -->
-
     <!-- ******************************** Second Section ************************************** -->
 
-    <div class="container-sm">
+    <div class="container">
         <h1 class="mt-5">Popular products</h1>
         <hr>
 
@@ -208,7 +137,7 @@
 
     <!-- ******************************** Third Section ************************************** -->
 
-    <div class="container-sm">
+    <div class="container">
         <h1 class="mt-5">Interior design and inspiration</h1>
         <hr>
 
@@ -220,16 +149,113 @@
             <button class="btn btn-outline-secondary">Office</button>
         </div>
 
-        <div class="grid-container">
-            <div class="grid-item">First</div>
-            <div class="grid-item">Second</div>
-            <div class="grid-item">Third</div>
-            <div class="grid-item">Fourth</div>
-            <div class="grid-item">Fifth</div>
-            <div class="grid-item">Sixth</div>
-            <div class="grid-item">Seven</div>
-            <div class="grid-item">Eight</div>
-            <div class="grid-item">Nine</div>
+        <div class="container">
+            <div class="grid-container">
+                <div class="grid-img one"></div>
+                <div class="grid-img two"></div>
+                <div class="grid-img four"></div>
+                <div class="grid-img five"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******************************** Fouth Section ************************************** -->
+
+    <div class="container">
+        <div class="d-flex justify-content-around mt-5">
+            <div>
+                <i class="fa-brands fa-pagelines" style="color: #000000;"></i>
+                <h4 class="text-center">Eco-Friendly</h4>
+                <p class="text-center mt-5">Decorate your space with eco-friendly furniture <br> with low VOCs,
+                    environmentally friendly <br> materials
+                    and safe coatings.</p>
+            </div>
+
+            <div>
+                <i class="fa-brands fa-slack" style="color: #050505;"></i>
+                <h4 class="text-center fe-5">Unbeatable quality</h4>
+                <p class="text-center mt-5">We choose raw materials from the best <br> manufacturers, so our
+                    furniture and decor are of <br> the
+                    highest quality at the best prices.</p>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-truck" style="color: #0d0d0d;"></i>
+                <h4 class="text-center">Delivery to your door</h4>
+                <p class="text-center mt-5">We will deliver to your door anywhere in the <br> world. If you're not
+                    100% satisfied, let us know <br>
+                    within 30 days and we'll solve the problem.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******************************** Fifth Section ************************************** -->
+
+    <div class="container">
+        <div class="d-flex justify-content-around mt-5 border border-1 rounded-5" style="height: 70vh;">
+            <div class="bg-light h-100 w-50">
+                <img src="./image/10.png" alt="">
+                <button class="btn btn-outline-secondary ms-5 w-25 rounded-5"> <i class="fa-solid fa-play fs-5 w-25"
+                        style="color: #0d0d0d;"></i> Play</button>
+            </div>
+            <div class="bg-dark h-100 w-50">
+                <p class="text-white text-center para7">Best Deal</p>
+                <h3 class="text-white text-center w-75 heading">Scandinavian green chair with wooden legs 60x100 cm
+                </h3>
+                <img src="./image/15.jpg" alt="" class="h-25 rounded img8">
+                <h2 class="text-white text-center mt-4">$357.00</h2>
+                <button class="btn btn-outline-secondary text-white rounded-5 text-center mt-3 btn1">Shop
+                    Now</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******************************** Sixth Section ************************************** -->
+
+    <div class="container">
+        <h2 class="mt-5">Blog and news</h2>
+
+        <div class="row">
+            <div class="col p-3">
+                <img src="./image/16.jpg" height="300px" alt="">
+                <p>Interior design</p>
+                <h6>Decorate your home for the festive season in 3 easy steps</h6>
+                <p>
+                    <span>Ava Johnson |
+                        September 11, 2024</span>
+                </p>
+            </div>
+            <div class="col p-3">
+                <img src="./image/17.jpg" height="300px" alt="">
+                <p>Interior design</p>
+                <h6>Transform your living space with these chic interior design tips</h6>
+                <p>
+                    <span>Ethan Miller |
+                        September 5, 2024</span>
+                </p>
+            </div>
+            <div class="col p-3">
+                <img src="./image/18.jpg" height="300px" alt="">
+                <p>Furniture</p>
+                <h6>Furnishing your space: a guide to choosing the perfect furniture pieces</h6>
+                <p>
+                    <span>Oliver Harris |
+                        August 23, 2024</span>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******************************** Footer Section ************************************** -->
+
+    <div class="bg-dark">
+        <div class="text-white">
+            <h6 class="mt-5">Bedroom</h6>
+            <h6>Living Room</h6>
+            <h6>Bathroom</h6>
+            <h6>Decoration</h6>
+            <h6>Kitchen</h6>
+            <h6>Sale</h6>
         </div>
     </div>
 </body>
