--- a/project/index.html
+++ b/project/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    w
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -248,16 +248,40 @@
 
     <!-- ******************************** Footer Section ************************************** -->
 
-    <div class="bg-dark">
-        <div class="text-white">
-            <h6 class="mt-5">Bedroom</h6>
+    <div class="bg-dark footer d-flex justify-content-around">
+        <div class="text-white mt-5">
+            <h6>Bedroom</h6>
             <h6>Living Room</h6>
             <h6>Bathroom</h6>
             <h6>Decoration</h6>
             <h6>Kitchen</h6>
             <h6>Sale</h6>
         </div>
+
+        <div class="text-white mt-5">
+            <h2>Stay in touch with us</h2>
+            <p>Receive the latest updates about our products & promotions</p>
+            <input type="email" name="" id="" placeholder="Your Email" class="rounded-5 w-50 text-center ">
+            <div class="d-flex ">
+                <i class="fa-brands fa-youtube fs-5"></i>
+                <i class="fa-brands fa-facebook-f fs-5"></i>
+                <i class="fa-brands fa-square-instagram fs-5"></i>
+                <i class="fa-brands fa-telegram fs-5"></i>
+                <i class="fa-brands fa-pinterestfs-5"></i>
+            </div>
+
+        </div>
+
+        <div class="text-white mt-5">
+            <h6>Shipping Option</h6>
+            <h6>Tracking a package</h6>
+            <h6>Help Center</h6>
+            <h6>Contact Us</h6>
+            <h6>Product Return</h6>
+            <h6>Location</h6>
+        </div>
     </div>
+    <p class="text-white bg-dark text-center">© All rights reserved. Made by Createx Studio</p>
 </body>
 
 </html>
