--- a/project2/project2/index.html
+++ b/project2/project2/index.html
@@ -78,13 +78,10 @@
 
         <div class="position-absolute start-0 shape">
             <img src="./image/shape-18.png" alt="">
-            <!-- <img src="./image/shape-19.png" alt="">
-            <img src="./image/shape-20.png" alt=""> -->
         </div>
 
         <div class="position-absolute start-0 img1">
             <img src="./image/shape-19.png" alt="">
-            <!-- <img src="./image/shape-20.png" alt="" class="z-3"> -->
         </div>
 
         <div class="position-absolute img2">
@@ -101,21 +98,49 @@
         </div>
 
     </div>
-    <div class="bg-color row pt-5 pb-5 text-center">
-            <div class="col text-white">
-               <h3> Expert Engineer</h3>
-                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p></div>
-            <div class="col text-white">
+
+
+    <div class="bg-color">
+        <div class="container row pt-5 pb-5 ps-5 text-center">
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-hammer" style="color: white;"></i>
+                <h3> Expert Engineer</h3>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-recycle" style="color: white;"></i>
                 <h3> Quality Material</h3>
-                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p></div>
-            <div class="col text-white">
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-house" style="color: white;"></i>
                 <h3> 24/7 Support</h3>
-                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p></div>
-            <div class="col text-white">
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-people-roof" style="color: white;"></i>
                 <h3> Roof Renovation</h3>
-                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p></div>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+        </div>
     </div>
 
+    <!-- ******** Section 2 ********* -->
+
+    <div class="container position-relative">
+        <div class="row">
+            <div class="col">
+                <img src="./image/3.jpg" alt="" class="mt-5">
+                <!-- <img src="./image/4.jpg" alt="" class="position-absolute abs"> -->
+            </div>
+
+            <div class="col mt-5">
+                <h1 class="display-1">ABOUT US</h1>
+
+                <p class="h3">Devoted to Delivering <br> Top Notch Roofing Solution</p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
