--- a/project2/project2/index.html
+++ b/project2/project2/index.html
@@ -130,15 +130,36 @@
     <div class="container position-relative">
         <div class="row">
             <div class="col">
-                <img src="./image/3.jpg" alt="" class="mt-5">
-                <!-- <img src="./image/4.jpg" alt="" class="position-absolute abs"> -->
+                <img src="./image/3.jpg" alt="" class="mt-5 mb-5 img5">
             </div>
 
             <div class="col mt-5">
                 <h1 class="display-1">ABOUT US</h1>
 
                 <p class="h3">Devoted to Delivering <br> Top Notch Roofing Solution</p>
+
+                <p class="mt-5">It is a long established fact that a readeer will be distracted the readable <br>
+                    content of a page when
+                    looking at layout the point of using lorem the is <br> Ipsum less normal distribution of letters.
+                </p>
+
+                <div>
+                    <button class="btn btn-danger text-white w-5 h-5 mt-5">Anout US | -></button>
+                </div>
+                <div class="mt-5">
+                    <span class="h4">Call Us Now</span> <p class="h6">+208-555-0112</p>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <!-- ******************* Section 3 *********************** -->
+
+    <div class="container-fliud bg-color">
+        <div class="container">
+            <p class="text-danger h3">WHAT WE DO</p>
+            <p>Delivering High Quality </p>
+            <p></p>
         </div>
     </div>
 </body>
