--- a/project2/index.html
+++ b/project2/index.html
@@ -11,43 +11,209 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
 
     <!-- ***** Section 1 ***** -->
 
-    <div class="section1 d-flex justify-content-evenly">
-        <nav>
-            <a href="#" class="text-white text-decoration-none">Home</a>
+    <div class="section1 container-fluid position-relative">
+        <nav class="navbar1 d-flex justify-content-evenly ms-5 mb-5 ps-5 pt-5">
+            <img src="./image/logo-white.svg" alt="" class="pb-5 ">
+            <a href="index.html" class="text-white text-decoration-none">Home</a>
             <a href="#" class="text-white text-decoration-none">About</a>
             <a href="#" class="text-white text-decoration-none">Service</a>
             <a href="#" class="text-white text-decoration-none">Pages</a>
             <a href="#" class="text-white text-decoration-none">Blog</a>
             <a href="#" class="text-white text-decoration-none">Contact</a>
+
+            <div>
+                <i class="fa-solid fa-magnifying-glass" style="color: white;"></i>
+                <i class="fa-solid fa-cart-shopping" style="color: white;"></i>
+            </div>
+
+            <div>
+                <button class="btn btn-danger text-white w-5 h-5">GET A QUOTE | -></button>
+            </div>
+
+            <div>
+                <i class="fa-solid fa-phone border border-1 rounded-circle border-danger" style="color: white;"></i>
+                <span class="text-white">Call Us Now</span>
+                <p class="text-white">+208-555-0112</p>
+            </div>
+
+            <div>
+                <!-- Button to Open the Modal -->
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#myModal">
+                    Login
+                </button>
+
+                <!-- The Modal -->
+                <div class="modal fade" id="myModal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                                <h4 class="modal-title">Login</h4>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                            </div>
+
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                                <form action="">
+                                    <div class="mb-3 mt-3">
+                                        <label for="email" class="form-label">Email:</label>
+                                        <input type="email" class="form-control" id="email" placeholder="Enter email"
+                                            name="email">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="pwd" class="form-label">Password:</label>
+                                        <input type="password" class="form-control" id="pwd"
+                                            placeholder="Enter password" name="pswd">
+                                    </div>
+                                    <button type="submit" class="btn btn-danger">Submit</button>
+                                </form>
+                            </div>
+
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                                Don't have any account ?
+                              <a href="#">Register hear</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </nav>
-        <!-- <div class="offcanvas offcanvas-end" id="demo">
-            <div class="offcanvas-header">
-              <h1 class="offcanvas-title">Links</h1>
-              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
-            </div>
+
+        <hr>
+
+        <!-- Offcanvas Sidebar -->
+        <div class="offcanvas offcanvas-end" id="demo">
             <div class="offcanvas-body d-flex flex-column">
-                <nav>
-                    <a href="#" class="text-black text-decoration-none">Home</a>
-                    <a href="#" class="text-black text-decoration-none">About</a>
-                    <a href="#" class="text-black text-decoration-none">Service</a>
-                    <a href="#" class="text-black text-decoration-none">Pages</a>
-                    <a href="#" class="text-black text-decoration-none">Blog</a>
-                    <a href="#" class="text-danger text-decoration-none">Contact</a>
-                </nav>
+                <a href="index.html" class="text-black text-decoration-none">Home</a>
+                <a href="#" class="text-black text-decoration-none">About</a>
+                <a href="#" class="text-black text-decoration-none">Service</a>
+                <a href="#" class="text-black text-decoration-none">Pages</a>
+                <a href="#" class="text-black text-decoration-none">Blog</a>
+                <a href="#" class="text-black text-decoration-none">Contact</a>
             </div>
-          </div> -->
-          
-          <!-- Button to open the offcanvas sidebar -->
-          <!-- <button class="navbar btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
-            Open Offcanvas Sidebar
-          </button> -->
+        </div>
+
+        <!-- Button to open the offcanvas sidebar -->
+        <button class="navbar btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
+            <i class="fa-solid fa-list" style="color: white;"></i>
+        </button>
+
+        <div class="container row-md">
+            <h2 class="text-white ps-5 heading">PROVIDE THE BEST SERVICES</h2>
+            <h1 class="display-1 text-white ps-5">Our Best Roofing </h1>
+            <h1 class="display-1 text-white ps-5">Services & Consulting </h1>
+            <p class="h5 text-white ps-5 mt-5">We denounce with righteous indignation and dislike men who are so </p>
+            <p class="h5 text-white ps-5">beguiled and demoralized by the charms pleasure.</p>
+            <div class="ps-5 mt-5">
+                <button class="btn btn-danger text-white w-5 h-5">View Services | -></button>
+                <img src="./image/2.png" alt="" class="ms-5">
+                <span class="text-white ms-5 h6">Satisfied clients</span>
+            </div>
+        </div>
+
+        <div class="position-absolute start-0 shape">
+            <img src="./image/shape-18.png" alt="">
+        </div>
+
+        <div class="position-absolute start-0 img1">
+            <img src="./image/shape-19.png" alt="">
+        </div>
+
+        <div class="position-absolute img2">
+            <img src="./image/shape-23.png" alt="">
+        </div>
+
+
+        <div class="position-absolute img3">
+            <img src="./image/shape-22.png" alt="">
+        </div>
+        <!-- 
+        <div class="position-absolute img4">
+            <img src="./image/shape-21.png" alt="">
+        </div> -->
+
+    </div>
+
+
+    <div class="bg-color">
+        <div class="container row pt-5 pb-5 ps-5 text-center">
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-hammer" style="color: white;"></i>
+                <h3> Expert Engineer</h3>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-recycle" style="color: white;"></i>
+                <h3> Quality Material</h3>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-house" style="color: white;"></i>
+                <h3> 24/7 Support</h3>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+            <div class="col text-white border border-1 me-5 ms-5">
+                <i class="fa-solid fa-people-roof" style="color: white;"></i>
+                <h3> Roof Renovation</h3>
+                <p>Nullam dictum ut est nune <br> of malesuada ornare is aliquam <br> eget lacinia mauris.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******** Section 2 ********* -->
+
+    <div class="container position-relative">
+        <div class="row">
+            <div class="col">
+                <img src="./image/3.jpg" alt="" class="mt-5 mb-5 img5">
+            </div>
+
+            <div class="col mt-5">
+                <h1 class="display-1">ABOUT US</h1>
+
+                <p class="h3">Devoted to Delivering <br> Top Notch Roofing Solution</p>
+
+                <p class="mt-5">It is a long established fact that a readeer will be distracted the readable <br>
+                    content of a page when
+                    looking at layout the point of using lorem the is <br> Ipsum less normal distribution of letters.
+                </p>
+
+                <div>
+                    <button class="btn btn-danger text-white w-5 h-5 mt-5">Anout US | -></button>
+                </div>
+                <div class="mt-5">
+                    <span class="h4">Call Us Now</span>
+                    <p class="h6">+208-555-0112</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ******************* Section 3 *********************** -->
+
+    <div class="container-fliud bg-color">
+        <div class="container row">
+            <div class="col-6">
+                <p class="text-danger h3 mt-5">WHAT WE DO</p>
+                <p class="text-white h1">Delivering High Quality </p>
+                <p class="text-white h1">Roof Service</p>
+            </div>
+
+            <div class="col-6">
+                <button>ALL sERVICES | -></button>
+            </div>
+        </div>
     </div>
 
 </body>
+
 </html>
