--- a/project3/pages.html
+++ b/project3/pages.html
@@ -12,12 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-
 </head>
 
 <body>
-    <!-- ********************** HEADER ***************************** -->
-
     <header>
         <div class="container-fluid bg-dark icon">
             <div class="container text-white">
@@ -208,27 +205,41 @@
         </div>
     </header>
 
-    <!-- ***************************** Section 1 ************************************* -->
+    <!-- ******************************** Section 1 **************************************** -->
 
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl">
-                    <img src="./image/1.jpg" class="img-fluid" alt="">
+    <div class="container-fluid">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            </div>
+
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./image/11.jpg" alt="" class="d-block w-100">
                 </div>
-
-                <div class="col-xl">
-                    <img src="./image/2.jpg" class="img-fluid" alt="">
-                    <img src="./image/3.jpg" class="ms-3 img-fluid" alt="">
-
-                    <div class="mt-4">
-                        <img src="./image/4.jpg" class="img-fluid" alt="">
-                        <img src="./image/5.jpg" class="ms-3 img-fluid" alt="">
-                    </div>
+                <div class="carousel-item">
+                    <img src="./image/12.jpg" alt="" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="./image/13.jpg" alt="" class="d-block w-100">
                 </div>
             </div>
+
+            <!-- Left and right controls/icons -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
         </div>
-    </section>
+    </div>
 
     <!-- ****************************** Section 2 ********************************** -->
 
@@ -449,7 +460,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
